--- a/static/login/Landing_Page.css
+++ b/static/login/Landing_Page.css
@@ -1,9 +1,10 @@
-body		{background-image: url("../images/login/background_signup.jpg");
+body		{
+        background-image: url("/static/login/background_signup.jpg");
 		background-size: 100%;
 		background-repeat: no-repeat;
-		background-position: fixed;
 		background-color: #D0CECE;
-		min-width: 500px;}
+		min-width: 500px;
+}
 		
 #page-header-wrapper { margin-top: 180px; }
 /**---------------------------------------------------------------------*/	
@@ -11,7 +12,7 @@ body		{background-image: url("../images/login/background_signup.jpg");
 			height: 89px;
 			width: 100%;
 			min-width: 1000px;
-			background-image:url("../images/general/lloyds_group_logo.png");
+			background-image:url("/static/login/lloyds_group_logo.png");
 			background-position: left;
 			background-size: 190px 100px;
 			background-repeat: no-repeat;
@@ -50,14 +51,24 @@ body		{background-image: url("../images/login/background_signup.jpg");
 		margin: 0px auto;
 		margin-bottom: 250px;
 		background-color: RGBA(255, 255, 255, 0.7);
-		background-image: url("../images/general/lloyds_group_logo.png");
+		background-image: url("/static/login/lloyds_group_logo.png");
 		background-size: 20% 20%;
 		background-repeat: no-repeat;}
+form{
+    float: left;
+					margin: 60px 0px;
+					width: 230px;
+					height: 200px;
+					font-family: Century Gothic;
+					font-size: 25px;
+					font-weight: bold;
+					color: #0B8C52;
+}
 		
 #j_login, #p_login	{float: left;
 					margin: 60px 0px;
 					width: 230px;
-					height: 200x;
+					height: 200px;
 					font-family: Century Gothic;
 					font-size: 25px;
 					font-weight: bold;
@@ -80,8 +91,11 @@ body		{background-image: url("../images/login/background_signup.jpg");
 				vertical-align: bottom;
 				background-color: #0B8C52;
 				color: #FFFFFF;
-				font-size: 20px;}
+				font-size: 20px;;}
+.line           {
 
+                display:block
+}
 .login_button	{background-color: #0B8C52;
 				height: 35px;
 				width: 100px;
@@ -168,6 +182,6 @@ body		{background-image: url("../images/login/background_signup.jpg");
 				
 .logos	{width: 170px;
 		height: 170px;
-		float: center;
+		float: none;
 		margin: 5px auto;}
 		
