--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -23,18 +23,19 @@
 <div id="main">
 	<img src="{% static 'login/title.png' %}" alt="finish sign" id="title">
     <div id="login">
-	<form action = "/user/auth" id="j_login">
+	<form action = "." id="j_login" method="POST">
 
+			<p>Junior Login</p>
+            {% csrf_token %}
             {{form.as_p}}
-
 			<input class="login_button" type="submit" value="Sign In" id="j_log" onclick="window.location.href='home.html'" />
 
 
 	</form>
-	<form action ="/user/auth" id="p_login">
+	<form action ="/user/auth" id="p_login" method="POST">
 			<p>Parent Login</p>
-			<div class="input_title"> <label for ="p_username" class="input_title">ID</label> <input type="text" name="username" id = "p_username" class="input_field" /></div>
-			<div class="input_title"> <label for = "p_password">PW</label> <input type="password" name = "password" class="input_field" id="p_password" /></div  >
+            {% csrf_token %}
+            {{form.as_p}}
 			<input class="login_button" type="submit" value="Sign In" id="p_log" onclick="window.location.href='home.html'" />
 
 	</form>
