--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -7,6 +7,15 @@
 	<meta charset="utf-8" />
 
 	<link rel="stylesheet" type="text/css" href={% static 'login\Landing_Page.css' %}/>
+<style>
+	body{
+		background-image: url('{% static "login\background_signup.jpg" %}') ;
+	}
+	#nav_bar{
+		background-image: url('{% static "login\lloyds_group_logo.png" %}') ;
+	}
+</style>
+	
 </head>
 
 
