--- a/templates/collection.html
+++ b/templates/collection.html
@@ -30,15 +30,15 @@
 <div id="content">
 <form id="trophies_box">
 	<p id="cards">0 x
-	<img src="../images/collection/cards(orange).png" width="130px" height="100px" alt="Cards">
+	<img src="../images/collection/cards(orange)_1.png" width="130px" height="100px" alt="Cards">
 	</p>
 	
 	<p id="rewards">0 x
-	<img src="../images/collection/goblet(blue).png" width="100px" height="100px" alt="Goblet">
+	<img src="../images/collection/goblet(blue)_1.png" width="100px" height="100px" alt="Goblet">
 	</p>
 	
 	<p id="gifts">0 x
-	<img src="../images/collection/gift(green).png" width="140px" height="100px" alt="Gifts">
+	<img src="../images/collection/gift(green)_1.png" width="140px" height="100px" alt="Gifts">
 	</p>
 	
 	<div id="legend">
