--- a/templates/collection.html
+++ b/templates/collection.html
@@ -3,7 +3,7 @@
 <head> 
  <meta http-equiv="content-type" 
  content="text/html;charset=utf-8"/> 
- <link rel="stylesheet" type="text/css" href= {% static 'collection.css' %}/>
+ <link rel="stylesheet" type="text/css" href= {% static 'collection/collection.css' %}/>
  <title>Collection</title> 
 </head> 
 
