--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="ATMs-CSS.css" />
+	<link rel="stylesheet" type="text/css" href={% static 'atms/ATMs-CSS.css' %} />
 	<title>ATMs</title>
 </head>
 
@@ -22,7 +22,7 @@
 </div>
 
 <div id="banner">
-	<img src="../images/ATMs/ATMs_1.png" alt="ATMs" title="ATMs" width="1055" height="191" />
+	<img src={% static 'atms/ATMs_1.png' %} alt="ATMs" title="ATMs" width="1055" height="191" />
 </div>
 
 <div id="content">
