--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -3,6 +3,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href={% static 'atms/ATMs-CSS.css' %} />
+	<style>
+		body{background-image: url('{% static "login\background_kids.jpg" %}') ;}
+		#nav_bar{background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
+	</style>
 	<title>ATMs</title>
 </head>
 
