--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="banner">
-	<img src={% static 'atms/ATMs_1.png' %} alt="ATMs" title="ATMs" width="1055" height="191" />
+	<img src="{% static 'atms/ATMs_1.png' %}" alt="ATMs" title="ATMs" width="1055" height="191" />
 </div>
 
 <div id="content">
