--- a/templates/Accounts.html
+++ b/templates/Accounts.html
@@ -24,7 +24,7 @@
 </div>
 
 <div id="banner">
-	<img  src={% static 'accounts/Accounts_1.png' %} width="1055px" height="191px" alt="Accounts Banner">
+	<img  src="{% static 'accounts/Accounts_1.png' %}" width="1055px" height="191px" alt="Accounts Banner">
 </div>
 
 <div id="content">
@@ -42,12 +42,12 @@
 	</div>
 
 	<div id="leftarrow">
-		<img src={% static 'accounts/left_arrow.png' %} alt="Left Arrow">
+		<img src="{% static 'accounts/left_arrow.png' %}" alt="Left Arrow">
 		<input type="text" value="  ￡" />
 	</div>
 
 	<div id="rightarrow">
-		<img src={% static 'accounts/right_arrow.png' %} alt="Right Arrow">
+		<img src="{% static 'accounts/right_arrow.png' %}" alt="Right Arrow">
 		<input type="text" value="  ￡" />
 	</div> 
 
