--- a/static/atms/ATMs-CSS.css
+++ b/static/atms/ATMs-CSS.css
@@ -2,8 +2,7 @@
 /* CSS Document */
 /*template*/
 /**---------------------------------------------------------------------*/
-body		{background-image: url("../images/general/background_kids.jpg");
-		background-size: 100%;}
+body		{background-size: 100%;}
 
 #content	{background-color: #FFFFFF;
 			width: 1055px;
@@ -20,7 +19,6 @@ body		{background-image: url("../images/general/background_kids.jpg");
 #nav_bar	{background-color: #FFFFFF;
 			height: 80px;
 			width: 1055px;
-			background-image:url("../images/general/lloyds_group_logo.png");
 			background-position: left;
 			background-size: 157px 85px;
 			background-repeat: no-repeat;
