--- a/static/bank_guide/guide-CSS.css
+++ b/static/bank_guide/guide-CSS.css
@@ -1,8 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 /*template*/
-body		{background-image: url("../images/general/background_kids_1.jpg");
-		background-size: 100%;}
+body		{background-size: 100%;}
 #banner	{width: 1055px;
 		height: 191px;
 		margin: 0% auto;}
@@ -19,7 +18,6 @@ body		{background-image: url("../images/general/background_kids_1.jpg");
 #nav_bar	{background-color: #FFFFFF;
 			height: 80px;
 			width: 1055px;
-			background-image:url("../images/general/lloyds_group_logo.png");
 			background-position: left;
 			background-size: 157px 85px;
 			background-repeat: no-repeat;
