--- a/static/collection/collection.css
+++ b/static/collection/collection.css
@@ -1,6 +1,5 @@
 /**---------------------------------------------------------------------*/
-body		{background-image: url("../images/general/background_kids.jpg");
-		background-size: 100%;}
+body		{background-size: 100%;}
 
 #content	{background-color: #FFFFFF;
 			width: 1055px;
@@ -16,7 +15,6 @@ body		{background-image: url("../images/general/background_kids.jpg");
 #nav_bar	{background-color: #FFFFFF;
 			height: 80px;
 			width: 1055px;
-			background-image:url("../images/general/lloyds_group_logo.png");
 			background-position: left;
 			background-size: 157px 85px;
 			background-repeat: no-repeat;
