--- a/static/home/home.css
+++ b/static/home/home.css
@@ -1,5 +1,4 @@
-body		{background-image: url("../images/general/background_kids.jpg");
-		background-size: 100%;}
+body		{background-size: 100%;}
 		
 #content	{width: 1055px;
 			margin: 0px auto;
@@ -12,7 +11,6 @@ body		{background-image: url("../images/general/background_kids.jpg");
 				width: 1075px;
 				margin: 0px auto;
 				background-color: #FFFFFF;
-				background-image:url("../images/general/lloyds_group_logo.png");
 				background-position: 10px 5px;
 				background-size: 350px 190px;
 				background-repeat: no-repeat;
