--- a/static/login/SignUp.css
+++ b/static/login/SignUp.css
@@ -46,9 +46,8 @@ body		{background-size: 100%;
 			height: 700px;
 			margin: 0px auto;
 			padding-top: 50px;
-			background-color: #FFFFFF;
-			background-size: 18% 11%;
-			background-repeat: no-repeat;}
+			background: RGBA(255, 255, 255, 1) url("/static/login/lloyds_group_logo.png") no-repeat;
+			background-size: 18% 11%;}
 			
 #form	{width: 850px;
 		height: 600px;
