--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lloyds NetBanking</title>
+	<title>Lloyds Junior Banking - Register</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="SignUp.css"/>
+	<link rel="stylesheet" type="text/css" href="../css/SignUp.css"/>
 </head>
 
 <body>
