--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -4,6 +4,8 @@
 	<title>Lloyds Junior Banking - Register</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="../css/SignUp.css"/>
+	body {background-image: url('{% static "login\background_signup.jpg" %}') ;}
+	#nav_bar {background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
 </head>
 
 <body>
