--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -4,8 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href={% static 'atms/ATMs-CSS.css' %} />
 	<style>
-		body {background-image: url('{% static "login\background_kids.jpg" %}') ;}
-		#nav_bar {background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
+		body {background-image: url('{% static "general\background_kids.jpg" %}') ;}
+		#nav_bar {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
 	</style>
 	<title>ATMs</title>
 </head>
