--- a/templates/Accounts.html
+++ b/templates/Accounts.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href={% static 'accounts/Accounts.css' %}/>
 	<style>
-		body {background-image: url('{% static "login\background_kids.jpg" %}') ;}
-		#nav_bar {background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
+		body {background-image: url('{% static "general\background_kids.jpg" %}') ;}
+		#nav_bar {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
 	</style>
 </head>
 <body>
