--- a/templates/goals.html
+++ b/templates/goals.html
@@ -5,8 +5,8 @@
  content="text/html;charset=utf-8"/> 
  <link rel="stylesheet" type="text/css" href={% static 'goals/goals.css' %}/>
  <style>
-	body {background-image: url('{% static "login\background_kids.jpg" %}') ;}
-	#nav_bar {background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
+	body {background-image: url('{% static "general\background_kids.jpg" %}') ;}
+	#nav_bar {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
 </style>
  <script type="text/javascript" src={% static 'goals/goals.js' %}></script>
  <title>Goals</title> 
