--- a/templates/parent_account.html
+++ b/templates/parent_account.html
@@ -5,7 +5,7 @@
  content="text/html;charset=utf-8"/> 
  <link rel="stylesheet" type="text/css" href= {% static 'parent_account.css' %}/>
  <style>
-	#nav_bar {background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
+	#nav_bar {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
 </style>
  <title>Parent Account</title> 
 </head> 
