--- a/templates/Guide.html
+++ b/templates/Guide.html
@@ -27,6 +27,7 @@
 
 <div id="banner">
 	<img src="{% static 'bank_guide/banking_guide_1.png' %}" alt="Baking guide" title="Banking guide" width="1055" height="191" />
+	<img  src="{% static 'general/logout_1.png' %}" width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
 </div>
 
 <div id="content">	
