--- a/templates/goals.html
+++ b/templates/goals.html
@@ -29,6 +29,7 @@
 
 <div id="banner">
 <img src="{% static 'goals/Goals_1.png' %}" width="1055px" height="191px" alt="Goals Banner">
+<img  src="{% static 'general/logout_1.png' %}" width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
 </div>
 
 <div id="content">
