--- a/static/parent_account.css
+++ b/static/parent_account.css
@@ -3,6 +3,12 @@ body		{background-color: #262626;}
 
 #content	{background-color: #262626;
 			margin: 0% auto;}
+			
+#logout	{float: right;
+		margin: 7px;}
+#logout:hover	{background-color: RGBA(255, 255, 255, 0.7);
+				border-radius: 3px;}
+#logout:active	{background-color: RGBA(208, 206, 206, 0.7);}
 /**---------------------------------------------------------------------*/	
 	
 /**---------------------------------------------------------------------*/	
