--- a/templates/Accounts.html
+++ b/templates/Accounts.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
+{% load staticfiles %}
 <head>
-	<title>Lloyds NetBanking</title>
+	<title>{% block title %}Lloyds NetBanking{% endblock %} </title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="Accounts.css"/>
+	<link rel="stylesheet" type="text/css" href={% static "accounts/Accounts.css" %}/>
 </head>
 <body>
 
@@ -20,7 +22,7 @@
 </div>
 
 <div id="banner">
-	<img  src="../images/accounts/Accounts_1.png" width="1055px" height="191px" alt="Accounts Banner">
+	<img  src={% static "accounts/Accounts_1.png" %} width="1055px" height="191px" alt="Accounts Banner">
 </div>
 
 <div id="content">
@@ -29,27 +31,27 @@
 
 	<div id="pocket">
 		<span class="box_title">POCKET</span>
-		<p id="pocket_balance">Balance: ￡ </p>
+		<p id="pocket_balance">Balance: ￡{{ balance }} </p>
 	</div>
 
 	<div id="stash">
 		<span class="box_title">STASH</span>
-		<p id="stash_balance">Balance: ￡ </p>
+		<p id="stash_balance">Balance: ￡{{ stash }} </p>
 	</div>
 
 	<div id="leftarrow">
-		<img src="../images/accounts/left_arrow.png" alt="Left Arrow">
+		<img src={% static "accounts/left_arrow.png" %} alt="Left Arrow">
 		<input type="text" value="  ￡" />
 	</div>
 
 	<div id="rightarrow">
-		<img src="../images/accounts/right_arrow.png" alt="Right Arrow">
+		<img src={% static "accounts/right_arrow.png" %}alt="Right Arrow">
 		<input type="text" value="  ￡" />
 	</div> 
 
 	<input class="make_transfer" type="button" value="MAKE TRANSFER" onClick=" " />
 
-</div>	
+</div>
 
 <hr/>
 	
