--- a/static/login/Landing_Page.css
+++ b/static/login/Landing_Page.css
@@ -3,10 +3,11 @@ body		{
 		background-color: #D0CECE;
 		min-width: 500px;
 		background-size: 100%;
+		background-image: url('/static/login/background_signup.jpg') ;
 }
 		
 #page-header-wrapper { margin-top: 180px; }
-/**---------------------------------------------------------------------*/	
+/**---------------------------------------------------------------------*/
 #nav_bar	{
     background-color: #FFFFFF;
 	height: 89px;
@@ -18,6 +19,7 @@ body		{
 	margin: -8px;
 	z-index: 9999;
 	position: fixed;
+	background-image: url('/static/login/lloyds_group_logo.png') ;
 }
 #nav_bar ul	{
     text-align: right;
@@ -161,7 +163,7 @@ body		{
 #profiles_text p	{width: auto;}							
 /**---------------------------------------------------------------------*/
 				
-/**---------------------------------------------------------------------*/						
+/**---------------------------------------------------------------------*/
 #footer			{background-color: #EAE7E7;
 				width: 101%;
 				margin-top: -4px;
