--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -7,13 +7,10 @@
 	<meta charset="utf-8" />
 
 	<link rel="stylesheet" type="text/css" href={% static 'login\Landing_Page.css' %}/>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script type="text/javascript" src={% static 'login\Landing_Page.js' %}></script>
+
 <style>
-	body{
-		background-image: url('{% static "login\background_signup.jpg" %}') ;
-	}
-	#nav_bar{
-		background-image: url('{% static "login\lloyds_group_logo.png" %}') ;
-	}
 </style>
 	
 </head>
@@ -23,8 +20,8 @@
 
 <div id="nav_bar">
 	<ul>	
-        <li><a href="Landing_Page.html">Main Website</a></li>
-        <li><a id="scroll" href="Landing_Page.html#about_start" onclick="smooth_scroll();">About Junior Banking</a></li>
+        <li><a href={% url  'landing'  %} class="smoothScroll" >Main Website</a></li>
+        <li><a id="scroll" class="smoothScroll" href= {% url  'landing'  %}#about_start ">About Junior Banking</a></li>
         <li><a href="SignUp.html">Sign Up</a></li>
 	</ul>
 </div>
@@ -141,11 +138,12 @@
 	
 <div id="footer">
 	<p id="footer_message">
-		Start learning with Lloyds Junior Banking<br/>
-		<button id="back_to_top" onclick="window.location.href='Landing_Page.html'">Back to Login</button>
-		<button id="register" onclick="window.location.href='SignUp.html'">Register</button>
+		Start learning with Lloyds Junior Banking
 	</p>
-	
+	<p id="buttons">
+		<a id="back_to_top" href="#main" class="smoothScroll">Back to Login</a>
+		<a id="register" href="SignUp.html">Register</a>
+	</p>
 	
 	
 	<div id="brands_logos">
