--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -26,8 +26,8 @@
 </div>
 
 <div id="banner">
-	<img src="{% static 'atms/ATMs_1.png' %}" alt="ATMs" title="ATMs" width="1055" height="191" />
-	<img  src="{% static 'general/logout_1.png' %}" width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
+	<img src={% static 'atms/ATMs_1.png' %} alt="ATMs" title="ATMs" width="1055" height="191" />
+	<img  src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
 </div>
 
 <div id="content">
