--- a/templates/Guide.html
+++ b/templates/Guide.html
@@ -26,8 +26,8 @@
 </div>
 
 <div id="banner">
-	<img src="{% static 'bank_guide/banking_guide_1.png' %}" alt="Baking guide" title="Banking guide" width="1055" height="191" />
-	<img  src="{% static 'general/logout_1.png' %}" width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
+	<img src={% static 'bank_guide/banking_guide_1.png' %} alt="Baking guide" title="Banking guide" width="1055" height="191" />
+	<img  src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
 </div>
 
 <div id="content">	
@@ -37,26 +37,26 @@
 			<tr>
 				<td>
 					<div id="what_is_bankingv2" onclick="myFunction4()">
-						<img src="{% static 'bank_guide/what_is_bankingv2.png' %}" alt="What is banking?" title="What is banking?" width="100" height="200" />
+						<img src={% static 'bank_guide/what_is_bankingv2.png' %} alt="What is banking?" title="What is banking?" width="100" height="200" />
 					</div>
 					<div id="what_is_banking" onclick="">
-						<img src="{% static 'bank_guide/what_is_banking.png' %}" alt="What is banking?" title="What is banking?" width="100" height="200" />
+						<img src={% static 'bank_guide/what_is_banking.png' %} alt="What is banking?" title="What is banking?" width="100" height="200" />
 					</div>
 				</td>
 				<td>
 					<div id="banking_glossaryv2" onclick="myFunction5()">
-						<img src="{% static 'bank_guide/banking_glossaryv2.png' %}" alt="Banking glossary" title="Banking glossary" width="100" height="200" />
+						<img src={% static 'bank_guide/banking_glossaryv2.png' %} alt="Banking glossary" title="Banking glossary" width="100" height="200" />
 					</div>
 					<div id="banking_glossary" onclick="">
-						<img src="{% static 'bank_guide/banking_glossary.png' %}" alt="Banking glossary" title="Banking glossary" width="100" height="200" />
+						<img src={% static 'bank_guide/banking_glossary.png' %} alt="Banking glossary" title="Banking glossary" width="100" height="200" />
 					</div>
 				</td>
 				<td>
 					<div id="banking_tipsv2" onclick="myFunction6()">
-						<img src="{% static 'bank_guide/how_to_bankv2.png' %}" alt="Banking Tips" title="Banking Tips" width="100" height="200" />
+						<img src={% static 'bank_guide/how_to_bankv2.png' %} alt="Banking Tips" title="Banking Tips" width="100" height="200" />
 					</div>
 					<div id="banking_tips" onclick="">
-						<img src="{% static 'bank_guide/how_to_bank.png' %}" alt="Banking Tips" title="Banking Tips" width="100" height="200" />
+						<img src={% static 'bank_guide/how_to_bank.png' %} alt="Banking Tips" title="Banking Tips" width="100" height="200" />
 					</div>
 				</td>
 			</tr>
