--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -21,7 +21,7 @@
 </div>
 
 <div id="main">
-<img src="../images/login/title.png" alt="finish sign" id="title">
+<img src={% static "login\title.png" %} alt="finish sign" id="title">
 
 <div id="register">
 		
