--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -27,7 +27,7 @@
 </div>
 	dj
 <div id="main">
-	<img src="{% static 'login/title.png' %}" alt="finish sign" id="title">
+	<img src={% static 'login/title.png' %} alt="finish sign" id="title">
     <div id="login">
 	<form action = "." id="j_login" method="POST">
 
