--- a/templates/collection.html
+++ b/templates/collection.html
@@ -28,28 +28,28 @@
 </div>
 
 <div id="banner">
-	<img  src="{% static 'collection/Collection_1.png' %}" width="1055px" height="191px" alt="Collection Banner">
-	<img  src="{% static 'general/logout_1.png' %}" width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
+	<img  src={% static 'collection/Collection_1.png' %} width="1055px" height="191px" alt="Collection Banner">
+	<img  src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
 </div>
 
 <div id="content">
 <form id="trophies_box">
 	<p id="cards">0 x
-	<img src="{% static 'collection/cards(orange)_1.png' %}" width="130px" height="100px" alt="Cards">
+	<img src={% static 'collection/cards(orange)_1.png' %} width="130px" height="100px" alt="Cards">
 	</p>
 	
 	<p id="rewards">0 x
-	<img src="{% static 'collection/goblet(blue)_1.png' %}" width="100px" height="100px" alt="Goblet">
+	<img src={% static 'collection/goblet(blue)_1.png' %} width="100px" height="100px" alt="Goblet">
 	</p>
 	
 	<p id="gifts">0 x
-	<img src="{% static 'collection/gift(green)_1.png' %}" width="140px" height="100px" alt="Gifts">
+	<img src={% static 'collection/gift(green)_1.png' %} width="140px" height="100px" alt="Gifts">
 	</p>
 	
 	<div id="legend">
-		<p><img src="{% static 'collection/orange_box.png' %}" width="30px" height="20px" alt="Legend: Orange Box"> Trade cards</p>
-		<p><img src="{% static 'collection/blue_box.png' %}" width="30px" height="20px" alt="Legend: Blue Box"> Rewards from Parents</p>
-		<p><img src="{% static 'collection/green_box.png' %}" width="30px" height="20px" alt="Legend: Green Box"> Gifts from Lloyds</p>
+		<p><img src={% static 'collection/orange_box.png' %} width="30px" height="20px" alt="Legend: Orange Box"> Trade cards</p>
+		<p><img src={% static 'collection/blue_box.png' %} width="30px" height="20px" alt="Legend: Blue Box"> Rewards from Parents</p>
+		<p><img src={% static 'collection/green_box.png' %} width="30px" height="20px" alt="Legend: Green Box"> Gifts from Lloyds</p>
 	</div>
 </form>
 
