--- a/templates/parent_account.html
+++ b/templates/parent_account.html
@@ -15,7 +15,7 @@
 <div id="content">
 
 <div id="nav_bar">
-	<img  src="{% static 'general/logout_parent_account.png' %}" width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
+	<img  src={% static 'general/logout_parent_account.png' %} width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
 </div>
 
 <div id="box1">
