Fixes + repo improvement
- Removed pycache related information + ignored it
- Removed signup button from landing page

--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -16,7 +16,7 @@
 	<ul>	
         <li><a href="Landing_Page.html">Main Website</a></li>
         <li><a href="Landing_Page.html#p1">About Junior Banking</a></li>
-        <li><a href="SignUp.html">Sign Up</a></li>
+        <!--<li><a href="SignUp.html">Sign Up</a></li> -->
 	</ul>
 </div>
 
