--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -21,8 +21,8 @@
 <div id="nav_bar">
 	<ul>	
         <li><a href={% url  'landing'  %} class="smoothScroll" >Main Website</a></li>
-        <li><a id="scroll" class="smoothScroll" href= {% url  'landing'  %}#about_start ">About Junior Banking</a></li>
-        <li><a href="SignUp.html">Sign Up</a></li>
+        <li><a id="scroll" class="smoothScroll" href= {% url  'landing'  %}#about_start >About Junior Banking</a></li>
+        <!--<li><a href="SignUp.html">Sign Up</a></li> -->
 	</ul>
 </div>
 	dj
