Commented out another register button

--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -142,7 +142,7 @@
 	</p>
 	<p id="buttons">
 		<a id="back_to_top" href="#main" class="smoothScroll">Back to Login</a>
-		<a id="register" href="SignUp.html">Register</a>
+		<!-- <a id="register" href="SignUp.html">Register</a> -->
 	</p>
 	
 	
