--- a/static/login/Landing_Page.css
+++ b/static/login/Landing_Page.css
@@ -56,7 +56,7 @@ body		{
 
 #login	{
     width: 560px;
-	height: 400px;
+	height: 370px;
     padding-left:5%;
     margin: 0px auto 250px;
     background: RGBA(255, 255, 255, 0.7) url("/static/login/lloyds_group_logo.png") no-repeat;
@@ -66,7 +66,7 @@ body		{
 		
 #j_login, #p_login	{
     float: left;
-	margin: 60px 0px;
+	margin: 12px 0px 0px 120px;
 	width: 230px;
 	height: 200px;
 	font-family: Century Gothic;
@@ -79,7 +79,7 @@ body		{
 	margin-left: 15px;
 }
 #p_login	{
-    border-left: 2px solid #0B8C52;
+  /*  border-left: 2px solid #0B8C52;  */
 }
 
 .input_title	{
@@ -93,9 +93,10 @@ body		{
 }
 
 .input_field	{
-    width: 150px;
+    width: 230px;
 	height: 24px;
     margin-top:0;
+    margin-left:-6px; /* hax */
 	vertical-align: bottom;
 	background-color: #0B8C52;
 	color: #FFFFFF;
