--- a/static/login/Landing_Page.css
+++ b/static/login/Landing_Page.css
@@ -194,8 +194,15 @@ body		{
 				margin-right:auto;
 }				
 				
-#brands_logos	{width: 100%;
-				background-color: #FFFFFF;}			
+#brands_logos_container	{width: 100%;
+				background-color: #FFFFFF;}
+
+#brands_logo_holder{
+
+	width:70%;
+	margin-left:auto;
+	margin-right:auto;
+}			
 				
 .logos	{width: 170px;
 		height: 170px;
